Remove GUIs, fix missing assignation issue, add player arg to GiveGemCommand